Exclusão de cartões de personagens.
