# java/guess-who-admin/src/main/java/io/github/lvrodrigues/guess/admin/CardsController.java
@@ -16,6 +16,7 @@ import org.springframework.hateoas.PagedModel;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -23,6 +24,9 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.servlet.function.EntityResponse;
+
+import com.jayway.jsonpath.Option;
 
 import io.github.lvrodrigues.fonema.Fonema;
 import io.github.lvrodrigues.guess.admin.assemblers.CardAssembler;
@@ -169,5 +173,25 @@ public class CardsController {
         return ResponseEntity
             .created(card.getRequiredLink(IanaLinkRelations.SELF).toUri())
             .body(card);
+    }
+
+    /**
+     * Exclui um cartão de personagem bíblico e suas referências.
+     *
+     * @param uuid Identificador único do cartão de personagem.
+     * @return Estado da requisição HTTP.
+     */
+    @DeleteMapping(value = "/{uuid}")
+    public ResponseEntity<?> removeCard(@PathVariable(required = true) UUID uuid) {
+        Optional<Card> optional = cards.findById(uuid);
+        if (optional.isEmpty()) {
+            NotFoundException ex = new NotFoundException();
+            ex.addDetail(String.format("Cartão com identificador \"%s\" não foi localizado.", uuid));
+            throw ex;
+        }
+        Card card = optional.get();
+        card.getQuestions().stream().forEach(q -> questions.delete(q));
+        cards.delete(card);
+        return ResponseEntity.noContent().build();
     }
 }
